--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@babel/preset-env": "^7.17.10",
 		"@babel/preset-react": "^7.16.7",
 		"@babel/register": "^7.17.7",
+		"@types/leaflet": "^1.7.11",
 		"autoprefixer": "^10.4.7",
 		"babel-loader": "^8.2.5",
 		"chalk": "^4.1.2",
@@ -44,6 +45,7 @@
 		"copy-webpack-plugin": "^11.0.0",
 		"cross-env": "7.0.3",
 		"css-loader": "^6.7.1",
+		"dotenv-webpack": "^8.0.0",
 		"eslint": "^8.14.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
@@ -53,6 +55,7 @@
 		"fork-ts-checker-webpack-plugin": "^7.2.11",
 		"html-webpack-plugin": "5.5.0",
 		"jsdom": "^19.0.0",
+		"leaflet": "^1.8.0",
 		"mini-css-extract-plugin": "^2.6.0",
 		"npm-run-all": "4.1.5",
 		"numeral": "2.0.6",
