--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"express": "4.18.1",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
+		"react-leaflet": "^4.0.1",
 		"typescript": "^4.6.4",
 		"whatwg-fetch": "3.6.2"
 	},
